syntax = "proto2";

package IM.Common;
option java_package = "com.coffeechat.protobuf";
option optimize_for = LITE_RUNTIME;

// 外部消息：客户端 <-> 服务器消息定义
enum CmdID {
  CID_LOGIN_AUTH_TOKEN_REQ = 0x0101; // 认证请求
  CID_LOGIN_AUTH_TOKEN_RSP = 0x0102;

  CID_LIST_RECENT_CONTACT_SESSION_REQ = 0x0201; // 最近聊天会话列表请求
  CID_LIST_RECENT_CONTACT_SESSION_RSP = 0x0202;
  CID_LIST_UNREAD_CNT_REQ = 0x0203; // 未读消息计数列表请求
  CID_LIST_UNREAD_CNT_RSP = 0x0204;
  CID_LIST_MSG_REQ = 0x0205; // 历史离线聊天消息请求
  CID_LIST_MSG_RSP = 0x0206;

  CID_MSG_DATA = 0x0301;                  // 发送消息
  CID_MSG_DATA_ACK = 0x0302;              // 消息收到确认
  CID_MSG_GET_LATEST_MSG_ID_REQ = 0x0303; // 某个会话最新的消息ID请求
  CID_MSG_GET_LATEST_MSG_ID_RSP = 0x0304;
  CID_MSG_GET_BY_MSG_ID_REQ = 0x0305; // 某条消息详情请求
  CID_MSG_GET_BY_MSG_ID_RSP = 0x0306;
}

// 内部消息：服务器 <-> 服务器消息定义
enum IntenralCmdID {
  SID_DB_VALIDATE_REQ = 0x0701; //
  SID_DB_VALIDATE_RSP = 0x0702; //
}

// 客户端类型
enum ClientType {
  CLIENT_TYPE_ANDROID = 0x01;
  CLIENT_TYPE_IOS = 0x02;
  CLIENT_TYPE_WEB = 0x03;
}

// 用户信息
message UserInfo {
  required uint64 user_id = 1;
  required string nick_name = 2; // 用户昵称
  optional string attach_info = 11;
}